--- a/Client/Components/EditCategoryComponent.razor.css
+++ b/Client/Components/EditCategoryComponent.razor.css
@@ -1,5 +1,210 @@
 ﻿.overlay {
     border-radius: 1.75rem 1.4375rem 0rem 0rem;
     background-color: #F9F9F9;
-    display:flex;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    padding: 2vh 0 2vh 0;
+    width: 100%;
+}
+
+.outerLay {
+    display: flex;
+    bottom: 0;
+    position: fixed;
+    z-index: 4;
+    width: 100%;
+}
+
+.BgOverlay {
+    background-color: rgba(1, 5, 43, 0.28);
+    z-index: 3;
+}
+
+.titleAndIcon {
+    display: flex;
+    flex-direction: row;
+     column-gap: 10vw; 
+    /* width: 90%; */
+    justify-content: space-evenly;
+}
+
+#emoji-trigger {
+    background: none; /* Removes default background */
+    color: inherit; /* Inherits text color from parent */
+    border: none; /* Removes default border */
+    padding: 0; /* Removes default padding */
+    margin: 0; /* Removes default margin */
+    font: inherit; /* Inherits font from parent */
+    cursor: pointer; /* Ensures the cursor appears clickable */
+    outline: inherit;
+}
+
+.catTitle {
+    width: 60vw;
+    height:5.5vh;
+    border-radius: 0.3125rem;
+    background: #FFF;
+    box-shadow: 0px 85px 24px 0px rgba(171, 173, 191, 0.00), 0px 55px 22px 0px rgba(171, 173, 191, 0.01), 0px 31px 18px 0px rgba(171, 173, 191, 0.05), 0px 14px 14px 0px rgba(171, 173, 191, 0.09), 0px 3px 7px 0px rgba(171, 173, 191, 0.10);
+    border: none;
+}
+
+.outerTitleAndIcon {
+    display: flex;
+    width: 90%;
+    align-items: flex-start;
+    flex-direction: column;
+    row-gap: 2vh;
+}
+
+
+.popupTitle{
+    font-size:1.3rem;
+    font-weight:500;
+}
+
+.closeOverlay {
+    background: none;
+    color: inherit;
+    border: none;
+    padding: 0;
+    margin: 0;
+    font: inherit;
+    cursor: pointer;
+    outline: inherit;
+}
+
+#color1 {
+    width: 25px;
+    height: 25px;
+    border-radius: 50%;
+    background-color: #F4B367;
+}
+#color2 {
+    width: 25px;
+    height: 25px;
+    border-radius: 50%;
+    background-color: #7B67F4;
+}
+#color3 {
+    width: 25px;
+    height: 25px;
+    border-radius: 50%;
+    background-color: #F467AB;
+}
+#color4 {
+    width: 25px;
+    height: 25px;
+    border-radius: 50%;
+    background-color: #F47867;
+}
+#color5 {
+    width: 25px;
+    height: 25px;
+    border-radius: 50%;
+    background-color: #678EF4;
+}
+#color6 {
+    width: 25px;
+    height: 25px;
+    border-radius: 50%;
+    background-color: #85E7A0;
+}
+#color7 {
+    width: 25px;
+    height: 25px;
+    border-radius: 50%;
+    background-color: #67CAF4;
+}
+#color8 {
+    width: 25px;
+    height: 25px;
+    border-radius: 50%;
+    background-color: #FFEF9D;
+}
+#color9 {
+    width: 25px;
+    height: 25px;
+    border-radius: 50%;
+    background-color: #FBEBD7;
+}
+#color10 {
+    width: 25px;
+    height: 25px;
+    border-radius: 50%;
+    background-color: #04905E;
+}
+#color11 {
+    width: 25px;
+    height: 25px;
+    border-radius: 50%;
+    background-color: #F95050;
+}
+#color12 {
+    width: 25px;
+    height: 25px;
+    border-radius: 50%;
+    background-color: #DADADA;
+}
+
+.outerColors {
+    display: flex;
+    flex-direction: column;
+    border-radius: 0.5rem;
+    background: #EDEFF7;
+    row-gap: 1.7vh;
+    align-items: center;
+    padding: 0.8vh 0;
+    width:100%;
+}
+
+
+.colorsRow {
+    display: flex;
+    align-items: flex-end;
+    justify-content: space-between;
+}
+
+.colorsContainer {
+    width: 90%;
+    row-gap: 1.7vh;
+    display: flex;
+    row-gap: 1.7vh;
+    flex-direction: column;
+}
+
+.saveBtn {
+    border-radius: 0.25rem;
+    background: #6775F4;
+    color: #6775F4;
+    width: 15.375rem;
+    height: 2.75rem;
+    flex-shrink: 0;
+    color: #F9F9F9;
+    text-align: center;
+    /* h2 - sub titles */
+    font-family: Heebo;
+    font-size: 1.3125rem;
+    font-style: normal;
+    font-weight: 500;
+    line-height: normal;
+    border: none;
+}
+
+.paddingDiv {
+    display: flex;
+    flex-direction: column;
+    row-gap: 5vh;
+    width:90%;
+}
+
+
+.outerColorsAndBtn {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    align-items: center;
+    row-gap:3vh;
 }
