--- a/Client/Pages/Index.razor.css
+++ b/Client/Pages/Index.razor.css
@@ -47,6 +47,9 @@
     justify-content: space-between;
     align-items: center;
     flex-direction: column;
+    width:100%;
+    height:100%;
+    position:relative;
 }
 
 #topSectionDiv {
@@ -404,5 +407,11 @@ input:checked + .slider:before {
 
 .BgOverlay {
     background-color: rgba(1, 5, 43, 0.28);
-    z-index:3;
+    z-index: 3;
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    
 }
